Saved Jupyter notebook 'notebook editor for compute_transport_canada_dic'

--- a/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
@@ -94,7 +94,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pattern\nentries \u003d re.findall(r\u0027\\n(\\w+)\\s\\n\u0027, dictionary)\nentries"
+        "pattern \u003d r\u0027\\n(\\w+)\\s\\n\u0027\nentries \u003d re.findall(pattern, dictionary)\nentries"
       ],
       "outputs": []
     },
@@ -103,7 +103,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pattern \u003d r\u0027\\n(\\w+)\\s\\n\u0027\nreplacement \u003d r\u0027[[[\\1]]] /\u0027\ndictionary_with_entries \u003d re.sub(pattern, replacement, clean_dictionary)\ndictionary_with_entries"
+        "pattern \u003d r\u0027\\n(\\w+)\\s\\n\u0027\nreplacement \u003d r\u0027[[[\\1]]] /\u0027\ndictionary_with_entries \u003d re.sub(pattern, replacement, dictionary)\ndictionary_with_entries"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Split the text using triple brackets\nentries \u003d re.split(r\u0027\\[\\[\\[|\\]\\]\\]\u0027, dictionary_with_entries)\n\n# Remove empty entries and strip whitespace\nentries \u003d [entry.strip() for entry in entries if entry.strip()]\n# Ensure both columns have the same length by adding empty strings if necessary\nif len(entries) % 2 !\u003d 0:\n    entries.append(\u0027\u0027)\n\n# Create a DataFrame with two columns: \u0027Entry\u0027 and \u0027Definition\u0027\ndata \u003d {\u0027Entry\u0027: entries[0::2], \u0027Definition\u0027: entries[1::2]}\ndf \u003d pd.DataFrame(data)\ndf"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "dale_crane_dic_df \u003d pd.DataFrame({\"entry\":list(df[\"Definition\"][0:1870]),\"definition\":list(df[\"Entry\"][1:1871])})\n"
       ],
       "outputs": []
     },
