Saved Jupyter notebook 'notebook editor for compute_transport_canada_dic'

--- a/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
@@ -121,7 +121,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "dale_crane_dic_df \u003d pd.DataFrame({\"entry\":list(df[\"Definition\"][0:1870]),\"definition\":list(df[\"Entry\"][1:1871])})\n"
+        "transport_canada_dic_df \u003d pd.DataFrame({\"entry\":list(df[\"Definition\"][0:1870]),\"definition\":list(df[\"Entry\"][1:1871])})\n"
       ],
       "outputs": []
     },
@@ -130,7 +130,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Compute recipe outputs from inputs\n# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n\ntransport_canada_dic_df \u003d dictionaries_of_aviation_df # For this sample code, simply copy input to output\n\n\n# Write recipe outputs\ntransport_canada_dic \u003d dataiku.Dataset(\"transport_canada_dic\")\ntransport_canada_dic.write_with_schema(transport_canada_dic_df)"
+        "# Write recipe outputs\ntransport_canada_dic \u003d dataiku.Dataset(\"transport_canada_dic\")\ntransport_canada_dic.write_with_schema(transport_canada_dic_df)"
       ],
       "outputs": []
     }
