--- a/ipython_notebooks/notebook editor for compute_test_library.ipynb
+++ b/ipython_notebooks/notebook editor for compute_test_library.ipynb
@@ -6,6 +6,18 @@
       "language": "python"
     },
     "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.10",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "createdOn": 1738853315659,
     "creator": "ludovic.bocken@cgi.com",
     "customFields": {},
