Saved Jupyter notebook 'notebook editor for compute_test_library'

--- a/ipython_notebooks/notebook editor for compute_test_library.ipynb
+++ b/ipython_notebooks/notebook editor for compute_test_library.ipynb
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import nlpp"
+        "import nlppp"
       ],
       "outputs": []
     },
