--- a/ipython_notebooks/notebook editor for compute_test_library.ipynb
+++ b/ipython_notebooks/notebook editor for compute_test_library.ipynb
@@ -35,36 +35,18 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "import nlppp"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
         "import sys\nimport dataiku\n\n# Add Dataiku project libraries to Python path\nsys.path.append(dataiku.get_custom_variables()[\"dip.home\"] + \"/lib/python\")\n\nimport nlppp  # Try importing again\n"
       ],
       "outputs": []
     },
     {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
+      "cell_type": "markdown",
+      "metadata": {
+        "trusted": false
+      },
       "source": [
         "\n\n\n\n# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n\ntest_library_df \u003d ... # Compute a Pandas dataframe to write into test_library\n\n\n# Write recipe outputs\ntest_library \u003d dataiku.Dataset(\"test_library\")\ntest_library.write_with_schema(test_library_df)"
-      ],
-      "outputs": []
+      ]
     }
   ]
 }
