--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -57,6 +57,15 @@
       "outputs": []
     },
     {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "pip install dframcy"
+      ],
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
