--- a/ipython_notebooks/notebook editor for compute_noun_phrases_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_noun_phrases_extracted_with_spacy.ipynb
@@ -1,48 +1,97 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
+      "name": "py-dku-containerized-venv-markitdown-scw-fa",
       "display_name": "Python in SCW-FA (env markitdown)",
-      "language": "python",
-      "name": "py-dku-containerized-venv-markitdown-scw-fa"
+      "language": "python"
     },
-    "associatedRecipe": "compute_noun_phrases_extracted_with_spacy",
-    "creator": "ludovic.bocken@cgi.com",
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.10",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "createdOn": 1738857882205,
+    "creator": "ludovic.bocken@cgi.com",
+    "customFields": {},
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {}
+    "associatedRecipe": "compute_noun_phrases_extracted_with_spacy",
+    "modifiedBy": "ludovic.bocken@cgi.com"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "import dataiku\n",
-        "import pandas as pd, numpy as np\n",
-        "from dataiku import pandasutils as pdu\n",
-        "\n",
-        "# Read recipe inputs\n",
-        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\n",
-        "corpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()\n",
-        "\n",
-        "\n",
-        "# Compute recipe outputs from inputs\n",
-        "# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n",
-        "# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n",
-        "\n",
-        "noun_phrases_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df # For this sample code, simply copy input to output\n",
-        "\n",
-        "\n",
-        "# Write recipe outputs\n",
-        "noun_phrases_extracted_with_spacy \u003d dataiku.Dataset(\"noun_phrases_extracted_with_spacy\")\n",
-        "noun_phrases_extracted_with_spacy.write_with_schema(noun_phrases_extracted_with_spacy_df)"
-      ]
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport spacy\n\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Load spaCy model\nnlp \u003d spacy.load(\"en_core_web_sm\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Read recipe inputs\ncorpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Function to extract noun phrases\ndef extract_noun_phrases(text):\n    doc \u003d nlp(text)\n    return [chunk.text for chunk in doc.noun_chunks]"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "noun_phrases_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_noun_phrases)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027noun_phrases\u0027] \u003d \n\n# Compute recipe outputs from inputs\nnoun_phrases_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df\n\n\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Write recipe outputs\nnoun_phrases_extracted_with_spacy \u003d dataiku.Dataset(\"noun_phrases_extracted_with_spacy\")\nnoun_phrases_extracted_with_spacy.write_with_schema(noun_phrases_extracted_with_spacy_df)"
+      ],
+      "outputs": []
     }
   ]
 }
