Saved Jupyter notebook 'notebook editor for compute_noun_phrases_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_noun_phrases_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_noun_phrases_extracted_with_spacy.ipynb
@@ -62,6 +62,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "corpus_for_knowledge_engineering_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# Function to extract noun phrases\ndef extract_noun_phrases(text):\n    doc \u003d nlp(text)\n    return [chunk.text for chunk in doc.noun_chunks]"
       ],
       "outputs": []
@@ -71,7 +80,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "noun_phrases_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_noun_phrases)"
+        "noun_phrases_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_noun_phrases)"
       ],
       "outputs": []
     },
@@ -80,7 +89,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027noun_phrases\u0027] \u003d \n\n# Compute recipe outputs from inputs\nnoun_phrases_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df\n\n\n"
+        "noun_phrases_extracted_with_spacy_df"
       ],
       "outputs": []
     },
