Saved Jupyter notebook 'notebook editor for compute_noun_phrases_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_noun_phrases_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_noun_phrases_extracted_with_spacy.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Function to extract noun phrases\ndef extract_noun_phrases(text):\n    doc \u003d nlp(text)\n    return [chunk.text for chunk in doc.noun_chunks]"
+        "# Function to extract noun phrases\ndef extract_noun_phrases(text):\n    nlp.max_length \u003d 3000000  # Set this to a value higher than your text length\n    doc \u003d nlp(text)\n    return [chunk.text for chunk in doc.noun_chunks]"
       ],
       "outputs": []
     },
