Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -57,15 +57,6 @@
       "outputs": []
     },
     {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "pip install dframcy"
-      ],
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -104,7 +95,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import spacy\nfrom dframcy import DframCy\n\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(u\u0027Apple is looking at buying U.K. startup for $1 billion\u0027)\nannotation_dataframe \u003d dframcy.to_dataframe(doc)"
+        "import spacy\nfrom dframcy import DframCy\n\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(u\u0027Apple is looking at buying U.K. startup for $1 billion\u0027)\nannotation_dataframe \u003d dframcy.to_dataframe(doc)\nannotation_dataframe"
       ],
       "outputs": []
     },
