Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import spacy\nfrom dframcy import DframCy\n\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(u\u0027Apple is looking at buying U.K. startup for $1 billion\u0027)\npos_df \u003d dframcy.to_dataframe(doc)\nannotation_dataframe"
+        "import spacy\nfrom dframcy import DframCy\n\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(u\u0027Apple is looking at buying U.K. startup for $1 billion\u0027)\npos_df \u003d dframcy.to_dataframe(doc)\ntags \u003d [\"NN\", \"NNP\"]\npos_df[pos_df[\"token_tag_\"].isin(tags)]"
       ],
       "outputs": []
     },
