--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -95,7 +95,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(u\u0027Apple is looking at buying U.K. startup for $1 billion\u0027)\npos_df \u003d dframcy.to_dataframe(doc)\ntags \u003d [\"NN\", \"NNP\"]\npos_df[pos_df[\"token_tag_\"].isin(tags)]"
+        "corpus_for_knowledge_engineering_df.columns"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "def extract_n\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(text)\npos_df \u003d dframcy.to_dataframe(doc)\ntags \u003d [\"NN\", \"NNP\"]\nfiltered \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]"
       ],
       "outputs": []
     },
