Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -104,7 +104,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "def extract_n\ndframcy \u003d DframCy(nlp)\ndoc \u003d dframcy.nlp(text)\npos_df \u003d dframcy.to_dataframe(doc)\ntags \u003d [\"NN\", \"NNP\"]\nfiltered \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]"
+        "def extract_nouns_with_spacy(text):\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    tags \u003d [\"NN\", \"NNP\"]\n    filtered_pos_df \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]\n    return filtered_pos_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import pandas as pd\n\n# Assuming you have already defined your extract_nouns_with_spacy function\ndef extract_nouns_with_spacy(text):\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    tags \u003d [\"NN\", \"NNP\"]\n    filtered_pos_df \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]\n    return filtered_pos_df\n\n# Apply the function to the \u0027text\u0027 column and consolidate the results\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns_with_spacy)\n\n# If you want to concatenate all the results into a single dataframe\nconsolidated_results \u003d pd.concat(corpus_for_knowledge_engineering_df[\u0027nouns\u0027].tolist(), ignore_index\u003dTrue)\n\nprint(consolidated_results)\n"
       ],
       "outputs": []
     },
