Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -95,15 +95,6 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "corpus_for_knowledge_engineering_df.columns"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
         "def extract_nouns_with_spacy(text):\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    tags \u003d [\"NN\", \"NNP\"]\n    filtered_pos_df \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]\n    return filtered_pos_df"
       ],
       "outputs": []
@@ -113,34 +104,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Assuming you have already defined your extract_nouns_with_spacy function\ndef extract_nouns_with_spacy(text):\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    tags \u003d [\"NN\", \"NNP\"]\n    filtered_pos_df \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]\n    return filtered_pos_df\n\n# Apply the function to the \u0027text\u0027 column and consolidate the results\nnouns_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns_with_spacy)\n\n# If you want to concatenate all the results into a single dataframe\nconsolidated_results_df \u003d pd.concat(nouns_extracted_with_spacy_df.tolist(), ignore_index\u003dTrue)\n\nprint(consolidated_results_df)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "text \u003d corpus_for_knowledge_engineering_df[\"text\"][0]\ndoc \u003d nlp(text)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "nouns \u003d [(token.text, token.pos_) for token in doc if token.pos_ \u003d\u003d \"NOUN\"]\npd.DataFrame(nouns, columns\u003d[\u0027word\u0027, \u0027tag\u0027])"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "corpus_for_knowledge_engineering_df[0:2]"
+        "# Assuming you have already defined your extract_nouns_with_spacy function\ndef extract_nouns_with_spacy(text):\n    nlp.max_length \u003d 3000000  # Set this to a value higher than your text length\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    tags \u003d [\"NN\", \"NNP\"]\n    filtered_pos_df \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]\n    return filtered_pos_df\n\n# Apply the function to the \u0027text\u0027 column and consolidate the results\nnouns_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns_with_spacy)\n\n# If you want to concatenate all the results into a single dataframe\nconsolidated_results_df \u003d pd.concat(nouns_extracted_with_spacy_df.tolist(), ignore_index\u003dTrue)\n\nprint(consolidated_results_df)"
       ],
       "outputs": []
     },
