--- a/ipython_notebooks/notebook editor for compute_pos_tagging_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_pos_tagging_with_spacy.ipynb
@@ -85,7 +85,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "def tag_with_spacy(text):\n    nlp.max_length \u003d 3000000  # Set this to a value higher than your text length\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    tags \u003d [\"NN\", \"NNP\"]\n    filtered_pos_df \u003d pos_df[pos_df[\"token_tag_\"].isin(tags)]\n    return filtered_pos_df\n\n# Apply the function to the \u0027text\u0027 column and consolidate the results\nnouns_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns_with_spacy)\n"
+        "def pos_tag_with_spacy(text):\n    nlp.max_length \u003d 3000000  # Set this to a value higher than your text length\n    dframcy \u003d DframCy(nlp)\n    doc \u003d dframcy.nlp(text)\n    pos_df \u003d dframcy.to_dataframe(doc)\n    return filtered_pos_df\n\n# Apply the function to the \u0027text\u0027 column and consolidate the results\npos_tagging_with_spacy_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns_with_spacy)"
       ],
       "outputs": []
     },
