Deleted recipe NONCONFORMITIES.compute_pos_tagging_with_spacy

--- a/ipython_notebooks/notebook editor for compute_pos_tagging_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_pos_tagging_with_spacy.ipynb
@@ -22,9 +22,8 @@
     "creator": "ludovic.bocken@cgi.com",
     "customFields": {},
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
-    "associatedRecipe": "compute_pos_tagging_with_spacy",
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
