Deleted recipe NONCONFORMITIES.compute_LTDM_letters_term_document_matrix

--- a/ipython_notebooks/notebook editor for compute_LTDM_letters_term_document_matrix.ipynb
+++ b/ipython_notebooks/notebook editor for compute_LTDM_letters_term_document_matrix.ipynb
@@ -18,12 +18,11 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "associatedRecipe": "compute_LTDM_letters_term_document_matrix",
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738597619961,
     "customFields": {},
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
