Deleted recipe NONCONFORMITIES.compute_named_entity_recognition_with_nltk

--- a/ipython_notebooks/notebook editor for compute_named_entity_recognition_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_named_entity_recognition_with_nltk.ipynb
@@ -20,9 +20,8 @@
     },
     "createdOn": 1738685410316,
     "creator": "ludovic.bocken@cgi.com",
-    "associatedRecipe": "compute_named_entity_recognition_with_nltk",
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "customFields": {},
     "modifiedBy": "ludovic.bocken@cgi.com"
