Deleted recipe NONCONFORMITIES.compute_corpus_for_knowledge_engineering

--- a/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
@@ -23,7 +23,6 @@
     },
     "createdOn": 1738686158938,
     "creator": "ludovic.bocken@cgi.com",
-    "associatedRecipe": "compute_corpus_for_knowledge_engineering",
     "creationTag": {
       "versionNumber": 0,
       "lastModifiedBy": {
@@ -32,7 +31,7 @@
       "lastModifiedOn": 1738686158938
     },
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "customFields": {},
     "modifiedBy": "ludovic.bocken@cgi.com"
