Deleted recipe NONCONFORMITIES.compute_named_entity_recognition

--- a/ipython_notebooks/notebook editor for compute_named_entity_recognition.ipynb
+++ b/ipython_notebooks/notebook editor for compute_named_entity_recognition.ipynb
@@ -1,13 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
       "display_name": "Python in SCW-FA (env markitdown)",
       "language": "python",
       "name": "py-dku-containerized-venv-markitdown-scw-fa"
     },
-    "associatedRecipe": "compute_named_entity_recognition",
     "dkuGit": {
       "lastInteraction": 0
     },
@@ -21,16 +18,17 @@
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738684992090,
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "customFields": {}
   },
+  "nbformat": 4,
+  "nbformat_minor": 0,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# -*- coding: utf-8 -*-\n",
         "import dataiku\n",
@@ -40,13 +38,13 @@
         "\n",
         "# Load spaCy model\n",
         "nlp \u003d spacy.load(\"en_core_web_sm\")"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Read recipe inputs\n",
         "A220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\n",
@@ -61,13 +59,13 @@
         "\n",
         "# Create a DataFrame\n",
         "df \u003d pd.DataFrame({\u0027text\u0027: texts})"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Perform named entity recognition\n",
         "def extract_entities(text):\n",
@@ -76,30 +74,31 @@
         "    return entities\n",
         "\n",
         "df[\u0027entities\u0027] \u003d df[\u0027text\u0027].apply(extract_entities)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Convert the DataFrame to the required format\n",
         "named_entity_recognition_df \u003d df.explode(\u0027entities\u0027).dropna().reset_index(drop\u003dTrue)\n",
         "named_entity_recognition_df[[\u0027entity\u0027, \u0027label\u0027]] \u003d pd.DataFrame(named_entity_recognition_df[\u0027entities\u0027].tolist(), index\u003dnamed_entity_recognition_df.index)\n",
         "named_entity_recognition_df \u003d named_entity_recognition_df.drop(columns\u003d[\u0027entities\u0027])"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Write recipe outputs\n",
         "named_entity_recognition \u003d dataiku.Dataset(\"named_entity_recognition\")\n",
         "named_entity_recognition.write_with_schema(named_entity_recognition_df)"
-      ]
+      ],
+      "outputs": []
     }
   ]
 }
